--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,5 @@
-cmake_minimum_required(VERSION 3.5)
-project(pdf VERSION 0.1.0 LANGUAGES C CXX)
-
-string(REPEAT "-" 80 SPLITLINE)
-
-
-set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
-    message("${SPLITLINE}")
-    message("${CMAKE_BINARY_DIR}")
-    message("${SPLITLINE}")
-add_executable(pdf main.cpp)
+cmake_minimum_required(VERSION 3.10)
+cmake_path(GET CMAKE_CURRENT_LIST_DIR STEM PROJ)
+project(${PROJ} LANGUAGES C CXX)
+add_link_options($<${MINGW}:-static>)
+add_subdirectory(src)
